# pyproprop

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .restyled.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/dev/: contributing.rst  map.rst  todo.rst
docs/source/user/: index.rst  installation.rst  overview.rst
pyproprop/: __init__.py  format_str_case.py  named_iterable.py  options.py  processed_property.py  utils.py
pyproprop/tests/: conftest.py  test_processed_property.py
tests/: conftest.py  requirements.txt  test_named_iterable.py  test_processed_property.py  test_processed_property_compare.py  test_processed_property_str_format.py
tests/unit/: test_named_iterable.py  test_str_format_function.py  test_utils.py
tests/unit/options/: test_options.py  test_processed_property_with_option.py
tests/unit/processed_property/: test_cast.py  test_compare.py  test_default.py  test_general.py  test_iterable.py  test_optimisable.py  test_option.py  test_parse_kwargs.py  test_post_method.py  test_read_only.py  test_str_format.py  test_type_repr_error_msg.py
