[metadata]
name = pyproprop
author = Sam Brockie
author-email = sambrockie@icloud.com
summary = Package for aiding writing classes with lots of similar simple properties without the boilerplate
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/brocksam/pyproprop
project_urls =
    Source Code = https://github.com/brocksam/pyproprop
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    property
    type-checking
    bound-checking
    type-casting

[files]
packages =
    pyproprop