[metadata]
name = pyproprop
version = 0.4.5
author = Sam Brockie
author_email = sambrockie@icloud.com
description = Package for aiding writing classes with lots of similar simple properties without the boilerplate
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pyproprop.readthedocs.io
project_urls =
    Documentation = https://pyproprop.readthedocs.io
    PyPI = https://pypi.org/project/pyproprop/
    conda-forge = https://anaconda.org/conda-forge/pyproprop
    Source Code = https://github.com/brocksam/pyproprop
    Bug Tracker = https://github.com/brocksam/pyproprop/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Utilities
license = MIT
license_files = [LICENSE]
keyword = 
    property
    type-checking
    bound-checking
    type-casting

[options]
python_requires = >=3.6
install_requires = 
    numpy >=1.17
    sympy >=1.6
    titlecase =2.0
    typing >=3.7

[options.extras_require]
docs = 
    sphinx >=3.2
    sphinx-autodoc-typehints >=1.11
    sphinx_rtd_theme >=0.5
tests = 
    codecov >=2.1
    hypothesis >=5.26
    pytest >=6.0
